--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="main.js" charset="utf-8"></script>
     <title>WhatsApp Web</title>
   </head>
   <body>
@@ -47,11 +46,11 @@
           </div>
 
           <div id="cerca">
-            <input type="search" name="" value="" placeholder="🔍     Cerca o inizia una nuova chat">
+            <input id="cercaContatti" type="search" name="" value="" placeholder="🔍     Cerca o inizia una nuova chat">
           </div>
 
           <div id="contatti">
-            <div class="contatto padding-flex active">
+            <div id="gianucci" class="contatto padding-flex active">
               <div class="avatar">
                 <img src="avatar/ava6.png" alt="img-contatto">
               </div>
@@ -64,7 +63,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="mamma" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava2.png" alt="img-contatto">
               </div>
@@ -77,7 +76,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="babbo" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava3.png" alt="img-contatto">
               </div>
@@ -90,7 +89,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="nonna" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava4.png" alt="img-contatto">
               </div>
@@ -103,7 +102,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="nonno" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava5.png" alt="img-contatto">
               </div>
@@ -116,7 +115,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="fabrizio" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava7.png" alt="img-contatto">
               </div>
@@ -129,7 +128,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="maurizio" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava8.png" alt="img-contatto">
               </div>
@@ -142,7 +141,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="giovanni" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava9.png" alt="img-contatto">
               </div>
@@ -155,7 +154,7 @@
               </div>
             </div>
 
-            <div class="contatto padding-flex">
+            <div id="khalid" class="contatto padding-flex">
               <div class="avatar">
                 <img src="avatar/ava10.png" alt="img-contatto">
               </div>
@@ -216,5 +215,8 @@
       <div class="white"></div>
 
     </div>
+
+    <script src="main.js" charset="utf-8"></script>
+
   </body>
 </html>
